@@ -1,0 +1,6 @@
+<?php
+return [
+        'externalimport:sync' => [
+                'class' => \Cobweb\ExternalImport\Command\ImportCommand::class
+        ]
+];
